broken it for my own needs

--- a/project/build.properties
+++ b/project/build.properties
@@ -2,8 +2,8 @@
 #Tue Sep 21 10:36:50 EDT 2010
 project.name=sbt-yui
 project.organization=hoffrocket
-project.version=0.2.1
+project.version=0.2.1custom
 sbt.version=0.7.4
 def.scala.version=2.7.7
-build.scala.versions=2.8.0 2.7.7
+build.scala.versions=2.8.1 2.7.7
 project.initialize=false
